footer misalignment fix

--- a/css/global.footer.css
+++ b/css/global.footer.css
@@ -1,12 +1,10 @@
 .footer {
-  width: 100%;
   height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 20px;
-  margin: 40px 0;
   background-color: var(--background-color);
+  margin: 40px auto;
 
   .footer__logo-link {
     width: 50px;
